Complet ver for tablets

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
           <ul>
             <li><a href="./index.html" class="after-class">Studio</a></li>
             <li>
-              <a href="./portfolio.html"
-                ><span class="dowolona">Portfolio</span></a
-              >
+              <a href="./portfolio.html"><span>Portfolio</span></a>
             </li>
             <li>
               <a href="#">Contacts</a>
@@ -441,8 +439,8 @@
           </ul>
         </div>
         <div class="subscription-box">
+          <label for="sub-mail" class="sub-mail-p">Subscribe</label>
           <form class="sub-box">
-            <label for="sub-mail" class="sub-mail-p">Subscribe</label>
             <input
               id="sub-mail"
               name="sub-mail"
