--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                   alt="Monitor iMac Studio with charts"
                   width="360"
                   height="300"
+                  srcset="./images/2x/computer2x.jpg 2x"
                 />
               </div>
             </li>
@@ -145,6 +146,7 @@
                   alt="Iphone with layers of different contacts in messages"
                   width="360"
                   height="300"
+                  srcset="./images/2x/messageapp2x.jpg 2x"
                 />
                 <!-- <div class="doing-discription"><p>Lorem, ipsum dolor.</p></div> -->
               </div>
@@ -156,6 +158,7 @@
                   alt="Phone held in hand on the background of a laptop"
                   width="360"
                   height="300"
+                  srcset="./images/2x/phone2x.jpg 2x"
                 />
                 <!-- <div class="doing-discription"><p>Lorem, ipsum dolor.</p></div> -->
               </div>
@@ -173,6 +176,7 @@
                 alt="Smiling man with beard and short black haircut looking straight at the camera"
                 width="264"
                 height="260"
+                srcset="./images/2x/mark2x.jpg 2x"
               />
               <div class="photo-discription">
                 <h3>Mark Guerrero</h3>
@@ -215,6 +219,7 @@
                 alt="A young man with brown hair and a short beard looking to the side"
                 width="264"
                 height="260"
+                srcset="./images/2x/tom2x.jpg 2x"
               />
               <div class="photo-discription">
                 <h3>Tom Ford</h3>
@@ -257,6 +262,7 @@
                 alt="Women with long brown hair looking in to camera"
                 width="264"
                 height="260"
+                srcset="./images/2x/camilla2x.jpg 2x"
               />
               <div class="photo-discription">
                 <h3>Camila Garcia</h3>
@@ -299,6 +305,7 @@
                 alt="A young man with black curly hair and a very short beard looking to camera"
                 width="264"
                 height="260"
+                srcset="./images/2x/daniel2x.jpg 2x"
               />
               <div class="photo-discription">
                 <h3>Daniel Wilson</h3>
