--- a/index.html
+++ b/index.html
@@ -142,13 +142,12 @@
             <li>
               <div class="doing-img">
                 <img
-                  src="./images/img2.jpg"
+                  src="/images/img2.jpg"
                   alt="Iphone with layers of different contacts in messages"
                   width="360"
                   height="300"
-                  srcset="./images/2x/messageapp2x.jpg 2x"
+                  srcset="./images/2x/messegeapp2x.jpg 2x"
                 />
-                <!-- <div class="doing-discription"><p>Lorem, ipsum dolor.</p></div> -->
               </div>
             </li>
             <li>
@@ -160,7 +159,6 @@
                   height="300"
                   srcset="./images/2x/phone2x.jpg 2x"
                 />
-                <!-- <div class="doing-discription"><p>Lorem, ipsum dolor.</p></div> -->
               </div>
             </li>
           </ul>
